// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose template page Client-side validation triggers 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-link-top"
    href="/message-templates"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You have not chosen a template type
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#templateType"
          >
            Select a template type
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-a-template-type"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group nhsuk-form-group--error"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="templateType-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a template type to create
            </h1>
          </legend>
          <p>
            <a
              href="/features"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about message channels (opens in a new tab)
            </a>
          </p>
          <div
            class="nhsuk-form-group nhsuk-form-group--error"
          >
            <div
              class="nhsuk-hint"
              id="templateType--hint"
            >
              Select one option
            </div>
            <span
              class="nhsuk-error-message"
              id="templateType--error-message"
            >
              <span
                class="nhsuk-u-visually-hidden"
              >
                Error: 
              </span>
              Select a template type
            </span>
            <div
              aria-describedby="templateType--hint templateType--error-message"
              class="nhsuk-radios"
              id="templateType"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="nhsapp-radio"
                  id="templateType-nhsapp"
                  name="templateType"
                  type="radio"
                  value="NHS_APP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-nhsapp"
                  id="templateType-nhsapp--label"
                >
                  NHS App message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="email-radio"
                  id="templateType-email"
                  name="templateType"
                  type="radio"
                  value="EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-email"
                  id="templateType-email--label"
                >
                  Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="sms-radio"
                  id="templateType-sms"
                  name="templateType"
                  type="radio"
                  value="SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-sms"
                  id="templateType-sms--label"
                >
                  Text message (SMS)
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="letter-radio"
                  id="templateType-letter"
                  name="templateType"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-letter"
                  id="templateType-letter--label"
                >
                  Letter
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-a-template-type-submit-button"
        type="submit"
      >
        Continue
      </button>
    </form>
  </main>
</DocumentFragment>
`;

exports[`Choose template page renders error component 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-link-top"
    href="/message-templates"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You have not chosen a template type
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#page"
          >
            Component error message
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-a-template-type"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="templateType-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a template type to create
            </h1>
          </legend>
          <p>
            <a
              href="/features"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about message channels (opens in a new tab)
            </a>
          </p>
          <div
            class="nhsuk-form-group"
          >
            <div
              class="nhsuk-hint"
              id="templateType--hint"
            >
              Select one option
            </div>
            <div
              aria-describedby="templateType--hint"
              class="nhsuk-radios"
              id="templateType"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="nhsapp-radio"
                  id="templateType-nhsapp"
                  name="templateType"
                  type="radio"
                  value="NHS_APP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-nhsapp"
                  id="templateType-nhsapp--label"
                >
                  NHS App message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="email-radio"
                  id="templateType-email"
                  name="templateType"
                  type="radio"
                  value="EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-email"
                  id="templateType-email--label"
                >
                  Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="sms-radio"
                  id="templateType-sms"
                  name="templateType"
                  type="radio"
                  value="SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-sms"
                  id="templateType-sms--label"
                >
                  Text message (SMS)
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="letter-radio"
                  id="templateType-letter"
                  name="templateType"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-letter"
                  id="templateType-letter--label"
                >
                  Letter
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-a-template-type-submit-button"
        type="submit"
      >
        Continue
      </button>
    </form>
  </main>
</DocumentFragment>
`;

exports[`Choose template page selects one radio button at a time 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-link-top"
    href="/message-templates"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-a-template-type"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="templateType-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a template type to create
            </h1>
          </legend>
          <p>
            <a
              href="/features"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about message channels (opens in a new tab)
            </a>
          </p>
          <div
            class="nhsuk-form-group"
          >
            <div
              class="nhsuk-hint"
              id="templateType--hint"
            >
              Select one option
            </div>
            <div
              aria-describedby="templateType--hint"
              class="nhsuk-radios"
              id="templateType"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="nhsapp-radio"
                  id="templateType-nhsapp"
                  name="templateType"
                  type="radio"
                  value="NHS_APP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-nhsapp"
                  id="templateType-nhsapp--label"
                >
                  NHS App message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="email-radio"
                  id="templateType-email"
                  name="templateType"
                  type="radio"
                  value="EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-email"
                  id="templateType-email--label"
                >
                  Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="sms-radio"
                  id="templateType-sms"
                  name="templateType"
                  type="radio"
                  value="SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-sms"
                  id="templateType-sms--label"
                >
                  Text message (SMS)
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="letter-radio"
                  id="templateType-letter"
                  name="templateType"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-letter"
                  id="templateType-letter--label"
                >
                  Letter
                </label>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-a-template-type-submit-button"
        type="submit"
      >
        Continue
      </button>
    </form>
  </main>
</DocumentFragment>
`;

exports[`Choose template page when letter authoring is enabled should show the correct validation errors for both template type and letter type 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-link-top"
    href="/message-templates"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      aria-labelledby="error-summary-title"
      class="nhsuk-error-summary"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="nhsuk-error-summary__title"
        data-testid="error-summary"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <div
        class="nhsuk-hint"
      >
        You have not chosen a letter template type
      </div>
      <ul
        class="nhsuk-list nhsuk-error-summary__list"
      >
        <li>
          <a
            href="#letterType"
          >
            Select a letter template type
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/action"
    >
      <input
        name="form-id"
        readonly=""
        type="hidden"
        value="choose-a-template-type"
      />
      <input
        name="csrf_token"
        readonly=""
        type="hidden"
        value="no_token"
      />
      <div
        class="nhsuk-form-group nhsuk-form-group--error"
      >
        <fieldset
          class="nhsuk-fieldset"
        >
          <legend
            class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
            data-testid="templateType-form__legend"
          >
            <h1
              class="nhsuk-fieldset__heading"
            >
              Choose a template type to create
            </h1>
          </legend>
          <p>
            <a
              href="/features"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about message channels (opens in a new tab)
            </a>
          </p>
          <div
            class="nhsuk-form-group"
          >
            <div
              class="nhsuk-hint"
              id="templateType--hint"
            >
              Select one option
            </div>
            <div
              aria-describedby="templateType--hint"
              class="nhsuk-radios"
              id="templateType"
            >
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="nhsapp-radio"
                  id="templateType-nhsapp"
                  name="templateType"
                  type="radio"
                  value="NHS_APP"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-nhsapp"
                  id="templateType-nhsapp--label"
                >
                  NHS App message
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="email-radio"
                  id="templateType-email"
                  name="templateType"
                  type="radio"
                  value="EMAIL"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-email"
                  id="templateType-email--label"
                >
                  Email
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="sms-radio"
                  id="templateType-sms"
                  name="templateType"
                  type="radio"
                  value="SMS"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-sms"
                  id="templateType-sms--label"
                >
                  Text message (SMS)
                </label>
              </div>
              <div
                class="nhsuk-radios__item"
              >
                <input
                  class="nhsuk-radios__input"
                  data-testid="letter-radio"
                  id="templateType-letter"
                  name="templateType"
                  type="radio"
                  value="LETTER"
                />
                <label
                  class="nhsuk-label nhsuk-radios__label"
                  for="templateType-letter"
                  id="templateType-letter--label"
                >
                  Letter
                </label>
              </div>
              <div
                class="nhsuk-radios__conditional"
                id="templateType-letter--conditional"
              >
                <div
                  class="nhsuk-form-group nhsuk-form-group--error"
                >
                  <span
                    class="nhsuk-error-message"
                    id="letterType--error-message"
                  >
                    <span
                      class="nhsuk-u-visually-hidden"
                    >
                      Error: 
                    </span>
                    Select a letter template type
                  </span>
                  <div
                    aria-describedby="letterType--error-message"
                    class="nhsuk-radios"
                    id="letterType"
                  >
                    <div
                      class="nhsuk-radios__item"
                    >
                      <input
                        class="nhsuk-radios__input"
                        data-testid="letter-type-x0-radio"
                        id="letterType-x0"
                        name="letterType"
                        type="radio"
                        value="x0"
                      />
                      <label
                        class="nhsuk-label nhsuk-radios__label"
                        for="letterType-x0"
                        id="letterType-x0--label"
                      >
                        Standard English letter
                      </label>
                    </div>
                    <div
                      class="nhsuk-radios__item"
                    >
                      <input
                        class="nhsuk-radios__input"
                        data-testid="letter-type-x1-radio"
                        id="letterType-x1"
                        name="letterType"
                        type="radio"
                        value="x1"
                      />
                      <label
                        class="nhsuk-label nhsuk-radios__label"
                        for="letterType-x1"
                        id="letterType-x1--label"
                      >
                        Large print letter
                      </label>
                    </div>
                    <div
                      class="nhsuk-radios__item"
                    >
                      <input
                        class="nhsuk-radios__input"
                        data-testid="letter-type-q4-radio"
                        id="letterType-q4"
                        name="letterType"
                        type="radio"
                        value="q4"
                      />
                      <label
                        class="nhsuk-label nhsuk-radios__label"
                        for="letterType-q4"
                        id="letterType-q4--label"
                      >
                        British Sign Language letter
                      </label>
                    </div>
                    <div
                      class="nhsuk-radios__item"
                    >
                      <input
                        class="nhsuk-radios__input"
                        data-testid="letter-type-language-radio"
                        id="letterType-language"
                        name="letterType"
                        type="radio"
                        value="language"
                      />
                      <label
                        class="nhsuk-label nhsuk-radios__label"
                        for="letterType-language"
                        id="letterType-language--label"
                      >
                        Other language letter
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <button
        aria-disabled="false"
        class="nhsuk-button"
        data-testid="submit-button"
        id="choose-a-template-type-submit-button"
        type="submit"
      >
        Continue
      </button>
    </form>
  </main>
</DocumentFragment>
`;
